--- a/source/paper/inflation_expectations.lyx
+++ b/source/paper/inflation_expectations.lyx
@@ -22,8 +22,6 @@
 %\DeclareSymbolFont{epsilon}{OML}{ntxmi}{m}{it}
 %\DeclareMathSymbol{\epsilon}{\mathord}{epsilon}{"0F}
 
-\input{../../output/analysis/top_gdp/top_gdp}
-
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\Var}{Var}
 \DeclareMathOperator{\Corr}{Corr}
@@ -280,22 +278,7 @@ literal "false"
 Illustrating the use of autofills by noting that the country with the highest GDP per capita in 2010,
  measured in September 2020 U.S.
  dollars and rounded to the nearest dollar,
- had a GDP per capita of 
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-$
-\backslash
-TopGDPValue
-\end_layout
-
-\end_inset
-
-.
+ had a GDP per capita of .
  
 \end_layout
 
@@ -323,29 +306,7 @@ end{spacing}
 \end_layout
 
 \begin_layout Standard
-\begin_inset CommandInset include
-LatexCommand include
-filename "../../source/figures/gdp_educ.lyx"
-literal "true"
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset Newpage newpage
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset CommandInset include
-LatexCommand include
-filename "../../output/tables/top_gdp.lyx"
-literal "true"
-
 \end_inset
 
 
@@ -359,7 +320,7 @@ References
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 btprint "btPrintCited"
-bibfiles "References"
+bibfiles "inflation_expectations"
 options "chicago"
 encoding "default"
 
@@ -425,7 +386,7 @@ Appendix References
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 btprint "btPrintCited"
-bibfiles "References"
+bibfiles "inflation_expectations"
 options "chicago"
 encoding "default"
 
